--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -39,8 +39,7 @@ main {
   height: 100%;
   min-height: 100%;
   width: 100%;
-  padding-top: 100px;
-  padding-bottom: 100px; }
+  padding-top: 100px; }
 
 header {
   z-index: 2;
@@ -75,9 +74,9 @@ header {
 .inner-container {
   transition-duration: 0.5s;
   position: absolute;
+  top: 50%;
   left: 50%;
-  transform: translateX(-50%);
-  position: relative;
+  transform: translate(-50%, -50%);
   clear: both; }
   @media only screen and (max-width: 64em) and (orientation: portrait) {
     .inner-container {
@@ -87,9 +86,8 @@ header {
       padding: 50px 10px 10px 10px; } }
   @media only screen and (min-width: 64em) and (max-width: 90em), (max-width: 64em) and (orientation: landscape) {
     .inner-container {
-      margin-top: -20px;
       width: 960px;
-      height: 470px; } }
+      height: 400px; } }
   @media only screen and (min-width: 90em) {
     .inner-container {
       width: 1440px;
