--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -120,7 +120,7 @@ main {
 	min-height: 100%;
 	width: 100%;
 	padding-top: 100px; //Header Height
-	padding-bottom: 100px;
+	// padding-bottom: 100px;
 }
 
 header {
@@ -159,8 +159,9 @@ header {
 
 .inner-container {
 	transition-duration: 0.5s;
-	@include center-horizontal;
-	position: relative;
+	// @include center-horizontal;
+	@include center;
+	// position: relative;
 	clear: both;
 	@include respond-to(handhelds) {
 		box-sizing: border-box;
@@ -169,9 +170,9 @@ header {
 		padding: 50px 10px 10px 10px;
 	}
 	@include respond-to(medium-screens) {
-		margin-top: -20px;
+		// margin-top: -20px;
 		width: 960px;
-		height: 470px;
+		height: 400px;
 	}
 	@include respond-to(wide-screens) {
 		width: 1440px;
