--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -186,9 +186,9 @@ header {
 
 .icons {
   position: relative;
+  top: calc(-20% - 10px);
   left: 0;
   clear: both;
-  float: left;
   width: calc(40% - 60px);
   height: calc(20% - 10px);
   margin: 0 50px 10px 10px; }
