--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -299,10 +299,10 @@ header {
 
 .icons {
 	position: relative;
-	// top: calc(-20% - 10px); // Quick fix
+	top: calc(-20% - 10px); // Quick fix
 	left: 0;
 	clear: both;
-	float: left;
+	// float: left;
 	width: calc(40% - 60px); // Minus margins
 	height: calc(20% - 10px); // Minus margins
 	margin: 0 50px 10px 10px;
