--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -330,11 +330,11 @@ header {
 		width: 100%;
 		padding-bottom: 100%;
 		// height: 100%;
-		background-position: bottom;
 		background-size: contain;
 		background-repeat: no-repeat;
 		transition-duration: 1s;
 		&--home {
+			background-position: bottom;
 			background-image: url($img-path + $home-icon);
 			&:hover {
 				-ms-transform: rotate(180deg); /* IE 9 */
@@ -346,6 +346,9 @@ header {
 			}
 		}
 		&--app {
+			width: 250%;
+			// width: 20%;
+			background-position: center;
 			background-image: url($img-path + $app-icon);
 		}
 	}
@@ -774,7 +777,17 @@ header {
 	}
 }
 
-
+.partners {
+	height: 100%;
+	width: 100%;
+	@include flex-wrapper;
+	&__item {
+		margin: 0 50px 0 50px;
+		height: 100%;
+		flex: 1;
+		background-color: red;
+	}
+}
 
 
 
