--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -543,7 +543,6 @@ header {
   margin: 0 50px 0 50px; }
 
 .info-pages {
-  padding-top: 5%;
   width: 100%;
   height: 100%; }
   .info-pages h1 {
@@ -594,8 +593,8 @@ header {
   margin: 0 10px 0 10px;
   text-align: center; }
 .team__image {
-  background-image: url("../imgs/Mabel 2.jpg");
   background-size: cover;
+  background-position: center;
   border-radius: 50%;
   width: 100%;
   padding-bottom: 100%; }
