--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -28,6 +28,7 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  position: relative;
   max-width: 100%;
   max-height: 100%; }
 
@@ -606,15 +607,25 @@ header {
   font-family: "Harriet Regular"; }
 
 .partners {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-wrap: nowrap;
-  align-items: stretch; }
-  .partners__item {
-    margin: 0 50px 0 50px;
+  width: 100%; }
+  .partners__item-wrapper {
     height: 100%;
-    flex: 1;
-    background-color: red; }
+    width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: stretch; }
+  .partners__item {
+    height: 100%;
+    margin: 0 50px 0 50px;
+    flex: 1; }
+  .partners__image {
+    cursor: pointer;
+    width: 100%;
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%); }
+    .partners__image:hover {
+      -webkit-filter: none;
+      /* Safari 6.0 - 9.0 */
+      filter: none; }
 
 /*# sourceMappingURL=style.css.map */
