--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -107,6 +107,7 @@ p {
 
 img {
 	@include center;
+	position: relative;
 	max-width: 100%;
 	max-height: 100%;
 }
@@ -779,14 +780,26 @@ header {
 }
 
 .partners {
-	height: 100%;
 	width: 100%;
-	@include flex-wrapper;
-	&__item {
-		margin: 0 50px 0 50px;
+	&__item-wrapper {
 		height: 100%;
+		width: 100%;
+		@include flex-wrapper;	
+	}
+	&__item {
+		height: 100%;
+		margin: 0 50px 0 50px;
 		flex: 1;
-		background-color: red;
+	}
+	&__image {
+		cursor: pointer;
+		width: 100%;
+		-webkit-filter: grayscale(100%);
+	    filter: grayscale(100%);
+	    &:hover {
+	    	-webkit-filter: none; /* Safari 6.0 - 9.0 */
+    	    filter: none;
+	    }
 	}
 }
 
