--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -72,6 +72,18 @@ header {
   .background--vr {
     background-image: url("../imgs/TAG-The-Agency-website-VR-Studios-bg.png"); }
 
+.fade-animation.ng-enter, .fade-animation.ng-leave {
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease; }
+.fade-animation.ng-enter {
+  opacity: 0; }
+.fade-animation.ng-enter-active {
+  opacity: 1; }
+.fade-animation.ng-leave {
+  opacity: 1; }
+.fade-animation.ng-leave-active {
+  opacity: 0; }
+
 .inner-container {
   transition-duration: 0.5s;
   position: absolute;
@@ -594,11 +606,23 @@ header {
   margin: 0 10px 0 10px;
   text-align: center; }
 .team__image {
+  cursor: pointer;
   background-size: cover;
   background-position: center;
   border-radius: 50%;
   width: 100%;
-  padding-bottom: 100%; }
+  padding-bottom: 100%;
+  -webkit-filter: grayscale(1);
+  -moz-filter: grayscale(1);
+  -o-filter: grayscale(1);
+  -ms-filter: grayscale(1);
+  filter: grayscale(1); }
+  .team__image:hover {
+    -webkit-filter: none;
+    -moz-filter: none;
+    -o-filter: none;
+    -ms-filter: none;
+    filter: none; }
 .team__name {
   margin: 2% 0 0 0;
   font-family: "Harriet Bold"; }
