add hover to team photos

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -119,8 +119,8 @@ header {
       padding: 50px 10px 10px 10px; } }
   @media only screen and (min-width: 64em) and (max-width: 90em), (max-width: 64em) and (orientation: landscape) {
     .inner-container {
-      width: 960px;
-      height: 430px; } }
+      width: 1020px;
+      height: 510px; } }
   @media only screen and (min-width: 90em) {
     .inner-container {
       width: 1440px;
@@ -636,6 +636,9 @@ header {
   border-radius: 50%;
   width: 100%;
   padding-bottom: 100%; }
+  .team__image--hover {
+    position: absolute;
+    display: none; }
 .team__name {
   margin: 2% 0 0 0;
   font-family: "Harriet Bold"; }
