--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -123,7 +123,6 @@ main {
 	min-height: 100%;
 	width: 100%;
 	padding-top: 100px; //Header Height
-	// padding-bottom: 100px;
 }
 
 header {
@@ -206,9 +205,7 @@ header {
 
 .inner-container {
 	transition-duration: 0.5s;
-	// @include center-horizontal;
 	@include center;
-	// position: relative;
 	clear: both;
 	@include respond-to(handhelds) {
 		box-sizing: border-box;
@@ -217,9 +214,8 @@ header {
 		padding: 50px 10px 10px 10px;
 	}
 	@include respond-to(medium-screens) {
-		// margin-top: -20px;
-		width: 960px;
-		height: 430px;
+		width: 1020px;
+		height: 510px;
 	}
 	@include respond-to(wide-screens) {
 		width: 1440px;
@@ -263,7 +259,6 @@ header {
 	}
 	@include respond-to(medium-screens) {
 		display: inline-block;
-		// height: calc(80% - 20px); // Minus margins
 		width: calc(40% - 60px); // Minus margins
 		margin: 10px 50px 10px 10px;
 		h1 {
@@ -818,6 +813,10 @@ header {
 		border-radius: 50%;
 		width: 100%;
 		padding-bottom: 100%;
+		&--hover {
+			position: absolute;
+			display: none;
+		}
 	}
 	&__name {
 		margin: 2% 0 0 0;
