--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -219,7 +219,8 @@ header {
 	}
 	@include respond-to(wide-screens) {
 		width: 1440px;
-		height: 650px;
+		max-height: 760px;
+		min-height: 650px;
 	}
 }
 
@@ -537,7 +538,7 @@ header {
 .cmyk-crosses {
 	@include center;
 	font-size: 1.3em;
-	position: relative;
+	position: absolute;
 	width: 70%;
 	height: 150px;
 	text-align: center;
@@ -546,8 +547,6 @@ header {
 	@include respond-to(handhelds) {
 		width: 100%;
 		top: 75%;
-	}
-	@include respond-to(medium-screens) {
 	}
 	@include respond-to(wide-screens) {
 		top: 90%;
@@ -749,6 +748,7 @@ header {
 
 .info-pages {
 	// padding-top: 5%;
+	position: absolute;
 	width: 100%;
 	height: 100%;
 	h1 {
@@ -761,14 +761,14 @@ header {
 		@include center-horizontal;
 		width: 40%;
 		position: relative;
-		margin: 5% 0 0 0;
+		margin: 2% 0 0 0;
 		text-align: center;
 	}
 
 	&__content {
-		margin-top: 5%;
+		margin-top: 2%;
 		position: relative;
-		height: 50%;
+		height: 75%;
 		width: 100%;
 	}
 	@include respond-to(medium-screens) {
@@ -839,6 +839,12 @@ header {
 		border-radius: 50%;
 		position: relative;
 		margin: 0 0 20px 0;
+	}
+	&__images-wrapper {
+		position: absolute;
+		bottom: 0%;
+		width: 100%;
+		height: 50%;
 	}
 }
 
