--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -128,7 +128,7 @@ header {
       min-height: 650px; } }
 
 .media {
-  position: relative;
+  position: absolute;
   display: inline-block;
   height: calc(100% - 20px);
   width: calc(60% - 20px);
@@ -597,7 +597,7 @@ header {
     text-align: center; }
   .info-pages__content {
     margin-top: 2%;
-    position: relative;
+    position: absolute;
     height: 75%;
     width: 100%; }
   @media only screen and (min-width: 64em) and (max-width: 90em), (max-width: 64em) and (orientation: landscape) {
@@ -670,14 +670,18 @@ header {
 .partners {
   width: 100%; }
   .partners__item-wrapper {
-    height: 100%;
-    width: 100%;
+    height: 40%;
+    width: 65%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
     display: flex;
     flex-wrap: nowrap;
-    align-items: stretch; }
+    align-items: stretch;
+    position: relative; }
   .partners__item {
     height: 100%;
-    margin: 0 50px 0 50px;
+    margin: 0 30px 0 30px;
     flex: 1; }
   .partners__image {
     cursor: pointer;
@@ -688,5 +692,32 @@ header {
       -webkit-filter: none;
       /* Safari 6.0 - 9.0 */
       filter: none; }
+  .partners__copy {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    -webkit-box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.25);
+    position: relative;
+    width: 25%;
+    padding-bottom: 20%;
+    text-align: center; }
+    .partners__copy-wrapper {
+      width: 90%;
+      height: 90%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%); }
+      .partners__copy-wrapper h2 {
+        font-size: 1.3em; }
+      .partners__copy-wrapper p {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-family: "Futura Light";
+        width: 100%; }
 
 /*# sourceMappingURL=style.css.map */
