--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -225,7 +225,7 @@ header {
 }
 
 .media {
-	position: relative;
+	position: absolute;
 	display: inline-block;
 	height: calc(100% - 20px);
 	width: calc(60% - 20px);
@@ -767,7 +767,7 @@ header {
 
 	&__content {
 		margin-top: 2%;
-		position: relative;
+		position: absolute;
 		height: 75%;
 		width: 100%;
 	}
@@ -851,13 +851,15 @@ header {
 .partners {
 	width: 100%;
 	&__item-wrapper {
-		height: 100%;
-		width: 100%;
+		height: 40%;
+		width: 65%;
+		@include center-horizontal;
 		@include flex-wrapper;	
+		position: relative;
 	}
 	&__item {
 		height: 100%;
-		margin: 0 50px 0 50px;
+		margin: 0 30px 0 30px;
 		flex: 1;
 	}
 	&__image {
@@ -869,6 +871,31 @@ header {
 	    	-webkit-filter: none; /* Safari 6.0 - 9.0 */
     	    filter: none;
 	    }
+	}
+	&__copy {
+		// box-sizing: border-box;
+		@include center-horizontal;
+		-webkit-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.25);
+		-moz-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.25);
+		box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.25);
+		position: relative;
+		width: 25%;
+		padding-bottom: 20%;
+		// padding: 30px 10px 30px 10px;
+		text-align: center;
+		&-wrapper {
+			width: 90%;
+			height: 90%;
+			@include center;
+			h2 {
+				font-size: 1.3em;
+			}
+			p {
+				@include center;
+				font-family: $body-font;
+				width: 100%;
+			}
+		}
 	}
 }
 
