--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -761,12 +761,12 @@ header {
 		@include center-horizontal;
 		width: 40%;
 		position: relative;
-		margin: 2% 0 0 0;
+		margin: 10px 0 0 0;
 		text-align: center;
 	}
 
 	&__content {
-		margin-top: 2%;
+		margin-top: 10px;
 		position: absolute;
 		height: 75%;
 		width: 100%;
@@ -840,14 +840,36 @@ header {
 		position: relative;
 		margin: 0 0 20px 0;
 	}
-	&__images-wrapper {
-		position: absolute;
-		bottom: 0%;
-		width: 100%;
-		height: 50%;
-	}
 }
 
+.personal-images {
+	position: absolute;
+	top: 365px;
+	width: 100%;
+	height: 50%;
+	// padding: 10px 10px 10px 10px;
+	box-sizing: border-box;
+	&__image {
+		margin: 10px 10px 10px 10px;
+		background-size: cover;
+		background-position: top;
+		height: calc(100% - 20px);
+		float: left;
+		&--1 {
+			width: calc(40% - 20px);
+		}
+		&--2  {
+			width: calc(15% - 20px);
+		}
+		&--3  {
+			width: calc(15% - 20px);
+		}
+
+		&--4 {
+			width: calc(30% - 20px);
+		}
+	}
+}
 .partners {
 	width: 100%;
 	&__item-wrapper {
@@ -869,6 +891,10 @@ header {
 	    filter: grayscale(100%);
 	    &:hover {
 	    	-webkit-filter: none; /* Safari 6.0 - 9.0 */
+    	    filter: none;
+	    }
+	    &--active {
+    	    -webkit-filter: none; /* Safari 6.0 - 9.0 */
     	    filter: none;
 	    }
 	}
