change bg image back

--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -24,7 +24,7 @@ $img-path: '../imgs/';
 
 $logo-dark: 'logos/TAG_logo_tag_black_blacktag.png';
 $logo-light: 'logos/TAG_white_1920x1080.png';
-$homepage-bg: 'backgrounds/iStock-502779284.jpg';
+$homepage-bg: 'backgrounds/TAG-The-Agency-website-homepage-bg.png';
 $production-bg: 'backgrounds/TAG-The-Agency-website-production-bg.png';
 $influencers-bg: 'backgrounds/TAG-The-Agency-website-influencers-bg.png';
 $strategy-bg: 'backgrounds/upload_11_10_2016_at_2_19_10_PM.png';
