--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -61,7 +61,7 @@ header {
     .background {
       background-position: 60% 0; } }
   .background--homepage {
-    background-image: url("../imgs/backgrounds/iStock-502779284.jpg"); }
+    background-image: url("../imgs/backgrounds/TAG-The-Agency-website-homepage-bg.png"); }
   .background--production {
     background-image: url("../imgs/backgrounds/TAG-The-Agency-website-production-bg.png"); }
   .background--influencers {
