--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -264,8 +264,8 @@ header {
   .nav-top__logo {
     cursor: pointer;
     float: left;
-    margin: 0 0 0 20px;
-    width: 100px;
+    margin: 10px 0 0 20px;
+    width: 155px;
     height: 100%;
     background-size: contain;
     background-repeat: no-repeat;
