--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -432,8 +432,8 @@ header {
 	&__logo {
 		cursor: pointer;
 		float: left;
-		margin: 0 0 0 20px;
-		width: 100px;
+		margin: 10px 0 0 20px;
+		width: 155px;
 		height: 100%;
 		background-size: contain;
 		background-repeat: no-repeat;
