--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -7,6 +7,12 @@
 @font-face {
   font-family: 'Harriet Bold';
   src: url("../fonts/Harriet Display Bold.otf"); }
+.center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
+
 html, body, header, main {
   overflow: hidden;
   margin: 0 0 0 0;
@@ -92,13 +98,13 @@ header {
     .inner-container {
       box-sizing: border-box;
       height: calc(100% - 100px);
-      width: 100%;
-      padding: 100px 50px 50px 50px; } }
+      width: 880px;
+      padding: 100px 30px 30px 30px; } }
   @media only screen and (max-width: 64em) and (orientation: landscape) {
     .inner-container {
       padding-top: 100px;
       height: calc(100% - 100px);
-      width: 100%; } }
+      width: 880px; } }
   @media only screen and (min-width: 64em) and (max-width: 90em), (max-width: 64em) and (orientation: landscape) {
     .inner-container {
       width: 1020px;
@@ -106,6 +112,7 @@ header {
   @media only screen and (min-width: 90em) {
     .inner-container {
       width: 1440px;
+      height: 760px;
       max-height: 760px;
       min-height: 650px; } }
 
@@ -131,8 +138,9 @@ header {
   float: left; }
   @media only screen and (max-width: 64em) and (orientation: portrait) {
     .copy {
+      display: inline-block;
       width: 100%;
-      height: 35%; }
+      margin-bottom: 50px; }
       .copy h1 {
         font-size: 2.8em;
         margin: 0 0 2% 0; }
@@ -346,6 +354,8 @@ header {
         display: none; } }
   .nav-top--dark {
     color: black; }
+    .nav-top--dark span {
+      background-color: black; }
 
 .cmyk-crosses {
   position: absolute;
@@ -772,5 +782,69 @@ header {
         transform: translate(-50%, -50%);
         font-family: "Futura Light";
         width: 100%; }
+
+.what {
+  float: right;
+  height: 700px;
+  width: 100%;
+  background-position: center; }
+  .what span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: inline-block;
+    color: white; }
+  .what__diagram {
+    position: relative;
+    width: 100%;
+    float: left;
+    height: 200px;
+    background-image: url("../imgs/icons/what-diagram.png");
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat; }
+  .what__bubbles {
+    position: relative;
+    width: 100%;
+    float: right;
+    height: 500px;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat; }
+  .what__button {
+    cursor: pointer;
+    border-radius: 50%;
+    height: 110px;
+    width: 110px;
+    position: relative;
+    float: left;
+    background-color: black;
+    margin-left: -7px; }
+    .what__button--production {
+      background-color: #00AEEF; }
+    .what__button--vr {
+      background-color: #EC008C; }
+    .what__button--strategy {
+      background-color: #FFF200; }
+      .what__button--strategy span {
+        color: black; }
+  @media only screen and (min-width: 64em) and (max-width: 90em), (max-width: 64em) and (orientation: landscape) {
+    .what {
+      font-size: 0.9em;
+      margin-top: 15px;
+      width: 600px;
+      height: 275px; }
+      .what__button {
+        height: 80px;
+        width: 80px; }
+      .what__bubbles {
+        height: 270px; } }
+  @media only screen and (min-width: 90em) {
+    .what {
+      font-size: 1.2em;
+      margin-top: 15px;
+      width: 850px;
+      height: 600px; } }
 
 /*# sourceMappingURL=style.css.map */
