--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -1074,8 +1074,60 @@ header {
 	}
 }
 
-
-
+.contact-form {
+	width: 100%;
+	height: 800px;
+	form {
+		width: 100%;
+		height: 100%;
+	}
+	span {
+		font-size: 4em;
+		font-family: "Harriet Bold"
+	}
+	&__input {
+		font-size: 3em;
+		margin: 0 0 30px 0;
+		padding: 0 0 0 10px;
+		outline: none;
+		box-sizing: border-box;
+		-webkit-appearance: none;
+		border: none;
+		border-radius: 10px;
+		height: 100px;
+		width: 100%;
+		opacity: 0.75;
+		&--name {
+			background-color: $blue;
+		}
+		&--email {
+			background-color: $pink;
+		}
+		&--phone {
+			background-color: $yellow;
+		}
+		&--message {
+			height: 300px;
+			background-color: $blue;
+		}
+	}
+	&__submit {
+		opacity: 0.75;
+		font-family: 'Futura';
+		background-color: $black;
+		font-size: 2em;
+		line-height: 100px;
+		text-align: center;
+		height: 100px;
+		width: 100%;
+		border-radius: 10px;
+		color: $yellow;
+		&:hover {
+			color: $black;
+			background-color: $yellow;
+		}
+	}
+} 
 
 
 
