--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -917,7 +917,8 @@ header {
     height: 100px;
     width: 100%;
     border-radius: 10px;
-    color: #FFF200; }
+    color: #FFF200;
+    transition-duration: 1s; }
     .contact-form__submit:hover {
       color: #231F20;
       background-color: #FFF200; }
@@ -931,5 +932,9 @@ header {
         font-size: 1.5em;
         line-height: 50px;
         height: 50px; } }
+    .contact-form__submit--after {
+      background-color: #EC008C;
+      color: white;
+      cursor: default; }
 
 /*# sourceMappingURL=style.css.map */
