--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -1153,6 +1153,7 @@ header {
 		width: 100%;
 		border-radius: 10px;
 		color: $yellow;
+		transition-duration: 1s;
 		&:hover {
 			color: $black;
 			background-color: $yellow;
@@ -1166,6 +1167,11 @@ header {
 			font-size: 1.5em;
 			line-height: 50px;
 			height: 50px;
+		}
+		&--after {
+			background-color: $pink;
+			color: white;
+			cursor: default;
 		}
 	}
 } 
